--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,20 @@
 [metadata]
 # replace with your username:
-name = example-pkg-YOUR-USERNAME-HERE
-version = 0.0.1
-author = Example Author
-author_email = author@example.com
-description = A small example package
+name = rki-covid19csv-cases
+version = 1.0a1
+author = Julius Hoffmann
+author_email = julius.Ho@web.de
+description = A simple module to work with the RKI_COVID19 csv files.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/Hoffmann77/rki-covid19csv-cases
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/Hoffmann77/rki-covid19csv-cases/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
+    Development Status :: 3 - Alpha
 
 [options]
 package_dir =
