--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,10 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+include_package_data = True
 
 [options.packages.find]
 where = src
+
+[options.package_data]
+rki-covid19csv-cases = data/*.csv
