--- a/setup.cfg
+++ b/setup.cfg
@@ -27,4 +27,4 @@ include_package_data = True
 where = src
 
 [options.package_data]
-rki-covid19csv-cases = data/*.csv
+rki_covid_cases_pkg = data/*.csv
