--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 include_package_data = True
+install_requires =
+    numpy
+    python-dateutil
 
 [options.packages.find]
 where = src
