--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 # replace with your username:
 name = rki-covid19csv-cases
-version = 1.0a1
+version = 0.9.0b1
 author = Julius Hoffmann
 author_email = julius.Ho@web.de
-description = A simple module to work with the RKI_COVID19 csv files.
+description = A simple module to work with the RKI_COVID19.csv files issued by the Robert-Koch-Institut in Germany.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Hoffmann77/rki-covid19csv-cases
@@ -30,4 +30,4 @@ install_requires =
 where = src
 
 [options.package_data]
-rki_covid_cases_pkg = data/*.csv
+rki_covid19csv_parser = data/*.csv
