--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 # replace with your username:
 name = rki-covid19csv-cases
-version = 0.9.0b1
+version = 0.9.0-beta1
 author = Julius Hoffmann
 author_email = julius.Ho@web.de
 description = A simple module to work with the RKI_COVID19.csv files issued by the Robert-Koch-Institut in Germany.
