--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 # replace with your username:
-name = rki-covid19csv-cases
+name = rki-covid19csv-parser
 version = 1.0.0-beta1
 author = Julius Hoffmann
 author_email = julius.Ho@web.de
