--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
 
 [options]
 package_dir =
