--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,6 @@ install_requires =
 where = src
 
 [options.package_data]
-rki_covid19csv_parser = data/*.csv
+rki_covid19csv_parser = 
+    data/*.csv
+    data/SOURCES.txt
