--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ long_description_content_type = text/markdown
 url = https://github.com/Hoffmann77/rki-covid19csv-cases
 project_urls =
     Bug Tracker = https://github.com/Hoffmann77/rki-covid19csv-cases/issues
+    Changelog = https://github.com/Hoffmann77/rki-covid19csv-parser/blob/main/CHANGELOG.md
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
